--- a/src/app/styles/App.css
+++ b/src/app/styles/App.css
@@ -1,18 +1,12 @@
-/* App.css */
-
-/* Estilos generales */
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
+/* Estilos para el contenedor */
+body{
   width: 100%;
-  height: 100%;
-  
-}
-
-.container {
-  width: 100%;
-  height: 100%;
+  height: 100vh; /* Usa 100vh para asegurar que el contenedor ocupa toda la altura de la ventana */
+  margin: 0; /* Elimina el margen por defecto para asegurar que ocupa toda la página */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   --s: 60px;
   --c1: #180a22;
   --c2: #5b42f3;
@@ -29,126 +23,3 @@ body {
     repeating-conic-gradient(var(--c2) 0 50%, var(--c1) 0 100%)
       calc(0.5 * var(--s)) 0 / calc(2 * var(--s)) var(--s);
 }
-
-
-.container {
-  max-width: 100%;
-  margin: 0 auto;
-  padding: 20px;
-  position: relative; /* Ensure the .container::before pseudo-element is positioned correctly */
-}
-
-/* Estilos para la navbar */
-nav {
-  width: 100%;
-  background-color: #333;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-}
-
-nav ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  justify-content: center;
-}
-
-nav li {
-  margin: 0 15px; /* Espacio entre los elementos */
-}
-
-nav a {
-  color: white;
-  text-decoration: none;
-  padding: 14px 20px;
-  display: block;
-}
-
-nav a:hover {
-  background-color: #575757;
-  border-radius: 4px;
-}
-
-/* Otros estilos existentes */
-.header {
-  padding-top: 60px; /* Espacio para la navbar fija */
-}
-
-.adm {
-  color: white;
-  padding: 3rem 0;
-  text-align: center;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-}
-
-/* Estilos para el contenido principal */
-.main-content {
-  margin-top: 20px;
-}
-
-.welcome {
-  display: flex;
-  justify-content: space-between;
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px;
-}
-
-.welcome-text {
-  flex: 1;
-}
-
-.welcome-image {
-  width: 200px;
-  height: 150px;
-  background-color: #000;
-  margin-left: 20px;
-  border-radius: 8px;
-}
-
-.welcome h2 {
-  font-size: 24px;
-  margin-bottom: 15px;
-  color: #333;
-}
-
-.welcome p {
-  font-size: 18px;
-  color: #555;
-}
-
-.features {
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px;
-}
-
-.features h2 {
-  font-size: 24px;
-  margin-bottom: 15px;
-  color: #333;
-}
-
-.features ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.features li {
-  background-color: #f9f9f9;
-  padding: 10px;
-  border-radius: 4px;
-  margin-bottom: 10px;
-}
-
-
-
